@@ -15,6 +15,7 @@ Where "NUMBER" is the bug number.
  - Added /SEND <nick> [file] which will automatically switch to PSEND
    when detecting a private net address.
  - Simplified default nick-right-click menu.
+ - Show "Last Talk" in nick-right-click menu as "minutes ago".
  - Strip mIRC colour from away message in right-click menu.
  - Warn when opening banlist in non-channel.
  ~ Reorganised and simplified IRC/Server menus and new View menu.
@@ -28,6 +29,8 @@ Where "NUMBER" is the bug number.
    it out based on tint values.
  ~ When closing a tab, re-focus the one near by, instead of always the
    last.
+ ~ Firefox style close button.
+ - 
  - 
 
 ~ = still incomplete.
